...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/getJokeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EFEFEF"
        android:fontFamily="sans-serif"
        android:text="Get Joke"
        android:textAlignment="center"
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jokeDelivery"
        app:layout_constraintVertical_bias="0.702" />

    <Button
        android:id="@+id/getJokeInfo"
        android:layout_width="54dp"
        android:layout_height="23dp"
        android:background="#EFEFEF"
        android:fontFamily="sans-serif"
        android:text="Info"
        android:textAlignment="center"
...
